Atualização geral do repositorio

--- a/vkt_final.ipynb
+++ b/vkt_final.ipynb
@@ -941,20 +941,20 @@
                 "    df_denatran = pd.read_csv('datasets/{}/vkt_v{}.csv'.format(ano, versao), low_memory=False)\r\n",
                 "    df_denatran['VKT_Preliminar'] = df_denatran[['Ano', 'Combustivel', 'Tipo']].apply(lambda x: get_vkt_preliminar(x, ano), axis=1)\r\n",
                 "    #df_denatran_vkt_erro = df_denatran[df_denatran['VKT_Preliminar'].map(lambda x: np.isnan(x))]\r\n",
-                "    df_denatran = df_denatran[~df_denatran['VKT_Preliminar'].map(lambda x: np.isnan(x))]\r\n",
                 "    df_denatran['Quantidade'] = df_denatran[['Ano', 'Tipo', 'Combustivel', 'Quantidade']].apply(lambda x: get_sucat(x, ano), axis=1)\r\n",
                 "    df_denatran['VKT_Preliminar'] = df_denatran['VKT_Preliminar']*df_denatran['Quantidade']\r\n",
+                "    df_denatran = df_denatran[~df_denatran['VKT_Preliminar'].map(lambda x: np.isnan(x))]\r\n",
                 "    df_denatran_vkt_neg = df_denatran[df_denatran['VKT_Preliminar'] <= 0]\r\n",
                 "\r\n",
                 "    df_preco_comb_rm_anual = df_preco_comb_rm[df_preco_comb_rm['Ano'] == ano]\r\n",
                 "    \r\n",
                 "    df_denatran = pd.merge(df_denatran, df_preco_comb_rm_anual[['RM', 'Relacao']], on='RM', how='left')\r\n",
-                "    df_denatran.loc[df_denatran['Combustivel'] != 'FLEX', 'Relacao'] = np.nan\r\n",
+                "    #df_denatran.loc[df_denatran['Combustivel'] != 'FLEX', 'Relacao'] = np.nan\r\n",
                 "\r\n",
                 "    df_denatran['Volume_Gasolina'] = df_denatran[df_denatran['Combustivel'] == 'GASOLINA'][['VKT_Preliminar', 'Consumo_Gasolina']].apply(lambda x: x['VKT_Preliminar']/x['Consumo_Gasolina'], axis=1)\r\n",
-                "    df_denatran['Volume_Gasolina'] = df_denatran[df_denatran['Combustivel'] == 'FLEX'][['VKT_Preliminar', 'Consumo_Gasolina', 'Relacao']].apply(lambda x: (x['VKT_Preliminar']*(1-x['Relacao']))/x['Consumo_Gasolina'], axis=1)\r\n",
+                "    df_denatran.loc[df_denatran['Combustivel'] == 'FLEX', 'Volume_Gasolina'] = df_denatran[df_denatran['Combustivel'] == 'FLEX'][['VKT_Preliminar', 'Consumo_Gasolina', 'Relacao']].apply(lambda x: (x['VKT_Preliminar']*(1-x['Relacao']))/x['Consumo_Gasolina'], axis=1)\r\n",
                 "    df_denatran['Volume_Alcool'] = df_denatran[df_denatran['Combustivel'] == 'ALCOOL'][['VKT_Preliminar', 'Consumo_Alcool']].apply(lambda x: x['VKT_Preliminar']/x['Consumo_Alcool'], axis=1)\r\n",
-                "    df_denatran['Volume_Alcool'] = df_denatran[df_denatran['Combustivel'] == 'FLEX'][['VKT_Preliminar', 'Consumo_Alcool', 'Relacao']].apply(lambda x: (x['VKT_Preliminar']*x['Relacao'])/x['Consumo_Alcool'], axis=1)\r\n",
+                "    df_denatran.loc[df_denatran['Combustivel'] == 'FLEX', 'Volume_Alcool'] = df_denatran[df_denatran['Combustivel'] == 'FLEX'][['VKT_Preliminar', 'Consumo_Alcool', 'Relacao']].apply(lambda x: (x['VKT_Preliminar']*x['Relacao'])/x['Consumo_Alcool'], axis=1)\r\n",
                 "    df_denatran['Volume_Diesel'] = df_denatran[df_denatran['Combustivel'] == 'DIESEL'][['VKT_Preliminar', 'Consumo_Diesel']].apply(lambda x: x['VKT_Preliminar']/x['Consumo_Diesel'], axis=1)\r\n",
                 "\r\n",
                 "    df_denatran.to_csv('datasets/{}/vkt_v{}.csv'.format(ano, versao), index=False)\r\n",
@@ -985,7 +985,7 @@
                 "    df_base_volume_comb_rm_anual = df_base_volume_comb_rm[df_base_volume_comb_rm['Ano'] == ano]\r\n",
                 "    df_base_volume_comb_rm_anual = df_base_volume_comb_rm_anual.drop(['Ano'], axis=1)\r\n",
                 "    df_base_diesel_rm_anual = df_base_diesel_rm[df_base_diesel_rm['Ano'] == ano]\r\n",
-                "    df_base_diesel_rm_anual = df_base_volume_comb_rm_anual.drop(['Ano'], axis=1)\r\n",
+                "    df_base_diesel_rm_anual = df_base_diesel_rm_anual.drop(['Ano'], axis=1)\r\n",
                 "\r\n",
                 "    df_base_volume_comb_rm_anual = df_base_volume_comb_rm_anual.pivot(index='RM', columns='Combustivel', values='Quantidade')\r\n",
                 "    df_base_volume_comb_rm_anual = pd.merge(df_base_volume_comb_rm_anual, df_base_diesel_rm_anual, on='RM', how='left')\r\n",
@@ -998,7 +998,7 @@
                 "    df_denatran_rm['Fator_Gasolina'] = df_denatran_rm['Volume_Venda_Gasolina']/df_denatran_rm['Volume_Gasolina']\r\n",
                 "    df_denatran_rm['Fator_Diesel'] = (df_denatran_rm['Volume_Venda_Diesel']*df_denatran_rm['Fator_Ajuste_Diesel'])/df_denatran_rm['Volume_Diesel']\r\n",
                 "\r\n",
-                "    df_denatran_rm = df_denatran_rm.drop(['Volume_Alcool', 'Volume_Gasolina', 'Volume_Diesel'], axis=1)\r\n",
+                "    df_denatran_rm = df_denatran_rm.drop(['Volume_Alcool', 'Volume_Gasolina', 'Volume_Diesel', 'Volume_Diesel', 'Volume_Venda_Alcool', 'Volume_Venda_Diesel', 'Volume_Venda_GNV', 'Volume_Venda_Gasolina', 'Fator_Ajuste_Diesel'], axis=1)\r\n",
                 "\r\n",
                 "    df_denatran = pd.merge(df_denatran, df_denatran_rm, on='RM', how='left')\r\n",
                 "\r\n",
@@ -1036,10 +1036,12 @@
                 "df_preco_comb_rm = pd.read_csv('datasets/base_combustiveis_precos_rel_rm.csv')\r\n",
                 "\r\n",
                 "df_base_volume_comb_rm = pd.read_csv('datasets/base_volume_comb_rm.csv')\r\n",
-                "df_base_diesel_rm = pd.read_csv('datasets/base_diesel_rm.csv')\r\n",
+                "df_base_diesel_rm = pd.read_csv('datasets/base_diesel_rm_rev02.csv')\r\n",
                 "\r\n",
-                "versao = 4\r\n",
-                "for ano in range(2019, 2020, 1):\r\n",
+                "versao = 6\r\n",
+                "ano_i = 2015\r\n",
+                "ano_f = 2019\r\n",
+                "for ano in range(ano_i, ano_f+1, 1):\r\n",
                 "    print(f\"Iniciando {ano}...\")\r\n",
                 "    vkt_fase1(ano, versao)\r\n",
                 "    print('Fase 1 concluída')\r\n",
@@ -1060,12 +1062,78 @@
             ],
             "outputs": [],
             "metadata": {}
+        },
+        {
+            "cell_type": "markdown",
+            "source": [],
+            "metadata": {}
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "source": [
+                "df_append = []\r\n",
+                "\r\n",
+                "for ano in range(ano_i, ano_f+1, 1):\r\n",
+                "    df = pd.read_csv('datasets/{}/vkt_v{}_rm.csv'.format(ano, versao), low_memory=False)\r\n",
+                "    df['Ano'] = ano\r\n",
+                "    df_append.append(df)\r\n",
+                "\r\n",
+                "df_rms = pd.concat(df_append)\r\n",
+                "\r\n",
+                "df_rms = df_rms.replace(\r\n",
+                "    {'Região Integrada de Desenvolvimento da Grande Teresina': 'RIDE-Teresina',\r\n",
+                "    'Região Integrada de Desenvolvimento do Distrito Federal e Entorno': 'RIDE-DF',\r\n",
+                "    'Região Metropolitana da Capital': 'RM Boa Vista',\r\n",
+                "    'Região Metropolitana da Grande São Luís': 'RM São Luís',\r\n",
+                "    'Região Metropolitana da Grande Vitória': 'RM Vitória',\r\n",
+                "    'Região Metropolitana de Aracaju': 'RM Aracaju',\r\n",
+                "    'Região Metropolitana de Belo Horizonte': 'RMBH',\r\n",
+                "    'Região Metropolitana de Belém': 'RM Belém',\r\n",
+                "    'Região Metropolitana de Curitiba': 'RM Curitiba',\r\n",
+                "    'Região Metropolitana de Florianópolis': 'RM Florianópolis',\r\n",
+                "    'Região Metropolitana de Fortaleza': 'RM Fortaleza',\r\n",
+                "    'Região Metropolitana de Goiânia': 'RM Goiânia',\r\n",
+                "    'Região Metropolitana de João Pessoa': 'RM João Pessoa',\r\n",
+                "    'Região Metropolitana de Macapá': 'RM Macapá',\r\n",
+                "    'Região Metropolitana de Maceió': 'RM Maceió',\r\n",
+                "    'Região Metropolitana de Manaus': 'RM Manaus',\r\n",
+                "    'Região Metropolitana de Natal': 'RM Natal',\r\n",
+                "    'Região Metropolitana de Palmas': 'RM Palmas',\r\n",
+                "    'Região Metropolitana de Porto Alegre': 'RM Porto Alegre',\r\n",
+                "    'Região Metropolitana de Porto Velho': 'RM Porto Velho',\r\n",
+                "    'Região Metropolitana de Recife': 'RM Recife',\r\n",
+                "    'Região Metropolitana de Salvador': 'RM Salvador',\r\n",
+                "    'Região Metropolitana de São Paulo': 'RMSP',\r\n",
+                "    'Região Metropolitana do Rio de Janeiro': 'RMRJ',\r\n",
+                "    'Região Metropolitana do Vale do Rio Cuiabá': 'RM Cuiabá'})\r\n",
+                "\r\n",
+                "df_rms.to_csv('datasets/vkt_geral_v{}_rm.csv'.format(versao), index=False)"
+            ],
+            "outputs": [],
+            "metadata": {}
         }
     ],
     "metadata": {
         "orig_nbformat": 4,
         "language_info": {
-            "name": "python"
+            "name": "python",
+            "version": "3.8.8",
+            "mimetype": "text/x-python",
+            "codemirror_mode": {
+                "name": "ipython",
+                "version": 3
+            },
+            "pygments_lexer": "ipython3",
+            "nbconvert_exporter": "python",
+            "file_extension": ".py"
+        },
+        "kernelspec": {
+            "name": "python3",
+            "display_name": "Python 3.8.8 64-bit ('ambiente': conda)"
+        },
+        "interpreter": {
+            "hash": "eb41aefadbd6a9efea6096a792c5e6eb7ba53d572987d7d43f05572d0319d59f"
         }
     },
     "nbformat": 4,
