--- a/vkt_explore_dataset_geral.ipynb
+++ b/vkt_explore_dataset_geral.ipynb
@@ -8,12 +8,12 @@
                 "import pandas as pd\r\n",
                 "\r\n",
                 "#df_v4 = pd.read_csv('datasets/vkt_geral_v4_rm.csv')\r\n",
-                "df_v5 = pd.read_csv('datasets/2017/vkt_v5.csv')\r\n",
-                "df_v6 = pd.read_csv('datasets/2017/vkt_v6.csv')\r\n",
+                "df_v5 = pd.read_csv('datasets/2019/vkt_v5.csv')\r\n",
+                "df_v6 = pd.read_csv('datasets/2019/vkt_v6.csv')\r\n",
                 "\r\n",
                 "comp=sv.compare(df_v5,df_v6)\r\n",
                 "#anl=sv.analyze(df_v6)\r\n",
-                "comp.show_html()\r\n",
+                "comp.show_html(filepath='sweetviz/SWEETVIZ_REPORT_2019_v5_v6.html')\r\n",
                 "#anl.show_html(filepath='SWEETVIZ_REPORT_2017_v6.html')\r\n",
                 "\r\n"
             ],
