Correção do vkt_util_flex e geração do v7

--- a/vkt_final.ipynb
+++ b/vkt_final.ipynb
@@ -14,7 +14,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 1,
             "source": [
                 "import pandas as pd\r\n",
                 "import numpy as np\r\n",
@@ -39,7 +39,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 2,
             "source": [
                 "def get_vkt_preliminar (df, ano_base):\r\n",
                 "    if(df['Tipo'] == 'AUTOMOVEL'):\r\n",
@@ -92,7 +92,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 3,
             "source": [
                 "def vkt_gasolina (ano_fab, ano_base):\r\n",
                 "    idade = ano_base - ano_fab\r\n",
@@ -116,7 +116,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 4,
             "source": [
                 "def vkt_alcool (ano_fab, ano_base):\r\n",
                 "    idade = ano_base - ano_fab\r\n",
@@ -140,7 +140,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 5,
             "source": [
                 "def vkt_flex (ano_fab, ano_base):\r\n",
                 "    idade = ano_base - ano_fab\r\n",
@@ -168,7 +168,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 6,
             "source": [
                 "def vkt_util_gasolina (ano_fab, ano_base):\r\n",
                 "    idade = ano_base - ano_fab\r\n",
@@ -192,12 +192,16 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 7,
             "source": [
                 "def vkt_util_flex (ano_fab, ano_base):\r\n",
                 "    idade = ano_base - ano_fab\r\n",
-                "    if (idade > 36):\r\n",
-                "        return 7862\r\n",
+                "    if (idade == 1):\r\n",
+                "        return 18220\r\n",
+                "    elif (idade > 8):\r\n",
+                "        return 17500\r\n",
+                "    elif (idade > 10):\r\n",
+                "        return np.nan\r\n",
                 "    else:\r\n",
                 "        return (107.39*(idade**3) - 1687.3*(idade**2) + 7200.5*idade + 12599)"
             ],
@@ -216,7 +220,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 8,
             "source": [
                 "def vkt_caminhao (ano_fab, ano_base):\r\n",
                 "    idade = ano_base - ano_fab\r\n",
@@ -242,7 +246,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 9,
             "source": [
                 "def vkt_caminhonete (ano_fab, ano_base):\r\n",
                 "    idade = ano_base - ano_fab\r\n",
@@ -266,7 +270,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 10,
             "source": [
                 "def vkt_onibus (ano_fab, ano_base):\r\n",
                 "    idade = ano_base - ano_fab\r\n",
@@ -290,7 +294,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 11,
             "source": [
                 "def vkt_util_diesel (ano_fab, ano_base):\r\n",
                 "    idade = ano_base - ano_fab\r\n",
@@ -316,7 +320,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 12,
             "source": [
                 "def vkt_microonibus (ano_fab, ano_base):\r\n",
                 "    idade = ano_base - ano_fab\r\n",
@@ -343,7 +347,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 13,
             "source": [
                 "def vkt_caminhao_trator (ano_fab, ano_base):\r\n",
                 "    idade = ano_base - ano_fab\r\n",
@@ -367,7 +371,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 14,
             "source": [
                 "def vkt_motociclo (ano_fab, ano_base):\r\n",
                 "    idade = ano_base - ano_fab\r\n",
@@ -391,7 +395,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 15,
             "source": [
                 "def vkt_motoneta (ano_fab, ano_base):\r\n",
                 "    idade = ano_base - ano_fab\r\n",
@@ -427,7 +431,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 16,
             "source": [
                 "def get_close_model (df_denatran):\r\n",
                 "    model = df_marca_modelo5[df_denatran == df_marca_modelo5['Modelo_A']].head(1)\r\n",
@@ -455,7 +459,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 17,
             "source": [
                 "def get_comb (df_denatran):\r\n",
                 "    gasolina = np.nan\r\n",
@@ -524,7 +528,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 18,
             "source": [
                 "def get_consumo(comb, df):\r\n",
                 "    ano = df['Ano']\r\n",
@@ -591,7 +595,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 19,
             "source": [
                 "def get_vkt (df):\r\n",
                 "    if(df['Combustivel'] == 'ALCOOL'):\r\n",
@@ -623,7 +627,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 20,
             "source": [
                 "def get_sucat (df, ano_base):\r\n",
                 "    idade = ano_base - df['Ano']\r\n",
@@ -663,7 +667,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 21,
             "source": [
                 "def vkt_fase1 (ano, versao):\r\n",
                 "    #Dataframe de Regiões Metropolitanas (df_rms)\r\n",
@@ -743,7 +747,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 22,
             "source": [
                 "def vkt_fase2 (ano, versao):\r\n",
                 "    #Abre o dataframe salvo na etapa anterior\r\n",
@@ -799,7 +803,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 23,
             "source": [
                 "def vkt_fase3 (ano, versao):\r\n",
                 "    #Abre o dataframe salvo na etapa anterior\r\n",
@@ -855,7 +859,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 24,
             "source": [
                 "def vkt_fase4 (ano, versao):\r\n",
                 "    #Abre o dataframe salvo na etapa anterior\r\n",
@@ -913,7 +917,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 25,
             "source": [
                 "def vkt_fase5 (ano, versao):\r\n",
                 "    #Abre o dataframe salvo na etapa anterior\r\n",
@@ -975,7 +979,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 26,
             "source": [
                 "def vkt_fase6 (ano, versao):\r\n",
                 "    #Abre o dataframe salvo na etapa anterior\r\n",
@@ -1030,7 +1034,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 27,
             "source": [
                 "def vkt_fase7 (ano, versao):\r\n",
                 "    #Abre o dataframe salvo na etapa anterior\r\n",
@@ -1096,7 +1100,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 28,
             "source": [
                 "#Carrega o dataframe da lista de veículos e respectivas informações previamente coletadas no iCarros no df_marca_modelo5\r\n",
                 "df_marca_modelo5 = pd.read_csv('datasets/marca_modelo_lista5_priority.csv')\r\n",
@@ -1132,7 +1136,7 @@
                 "df_base_diesel_rm = pd.read_csv('datasets/base_diesel_rm_rev02.csv')\r\n",
                 "\r\n",
                 "#Parametrizações dos anos e versão de referência\r\n",
-                "versao = 6\r\n",
+                "versao = 7\r\n",
                 "ano_i = 2015\r\n",
                 "ano_f = 2019\r\n",
                 "#Inicia estrutura de repetição\r\n",
@@ -1155,7 +1159,44 @@
                 "    df_denatran = pd.read_csv('datasets/{}/vkt_v{}.csv'.format(ano, versao), low_memory=False)\r\n",
                 "    print(df_denatran)"
             ],
-            "outputs": [],
+            "outputs": [
+                {
+                    "output_type": "stream",
+                    "name": "stdout",
+                    "text": [
+                        "Iniciando 2015...\n",
+                        "                 UF   Município             Marca Modelo  \\\n",
+                        "0              ACRE  ACRELANDIA             AGRALE/13000   \n",
+                        "1              ACRE  ACRELANDIA          AGRALE/1800D RD   \n",
+                        "2              ACRE  ACRELANDIA          AGRALE/1800D RD   \n",
+                        "3              ACRE  ACRELANDIA            AGRALE/6000 D   \n",
+                        "4              ACRE  ACRELANDIA            AGRALE/6000 D   \n",
+                        "...             ...         ...                      ...   \n",
+                        "14023476  TOCANTINS     XAMBIOA  YAMAHA/YBR125 FACTOR ED   \n",
+                        "14023477  TOCANTINS     XAMBIOA  YAMAHA/YBR125 FACTOR ED   \n",
+                        "14023478  TOCANTINS     XAMBIOA   YAMAHA/YBR125 FACTOR K   \n",
+                        "14023479  TOCANTINS     XAMBIOA    YAMAHA/YS150 FAZER ED   \n",
+                        "14023480  TOCANTINS     XAMBIOA    YAMAHA/YS150 FAZER ED   \n",
+                        "\n",
+                        "         Ano Fabricação Veículo CRV  Qtd. Veículos  \n",
+                        "0                              2008            1.0  \n",
+                        "1                              1990            1.0  \n",
+                        "2                              1993            1.0  \n",
+                        "3                              2005            1.0  \n",
+                        "4                              2008            1.0  \n",
+                        "...                             ...            ...  \n",
+                        "14023476                       2013            3.0  \n",
+                        "14023477                       2015            1.0  \n",
+                        "14023478                       2013            3.0  \n",
+                        "14023479                       2013            2.0  \n",
+                        "14023480                       2014            3.0  \n",
+                        "\n",
+                        "[14023481 rows x 5 columns]\n",
+                        "Fase 1 concluída\n",
+                        "Fase 2 concluída\n"
+                    ]
+                }
+            ],
             "metadata": {}
         },
         {
@@ -1222,7 +1263,7 @@
         "orig_nbformat": 4,
         "language_info": {
             "name": "python",
-            "version": "3.8.8",
+            "version": "3.8.11",
             "mimetype": "text/x-python",
             "codemirror_mode": {
                 "name": "ipython",
